# rle_string

./: CMakeLists.txt  Dockerfile  README.md  rleinfo.cpp
.github/workflows/: cmake.yml  docker-image.yml
include/rle/: bitvector.hpp  rle_string.hpp  utils.hpp  version.hpp.in
src/: bitvector.cpp  rle_string.cpp  utils.cpp
tests/: unit_tests.cpp
tests/files/: place_holder.txt
